Fix mobile horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,11 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 :target {
